traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:8: warning: enclosing method test has result type Unit: return value discarded
    return t1&&t2
    ^TraversalByColumn:10: error: value unary_! is not a member of Unit
  while (!test) {
         ^